# django-admin-row-actions

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_admin_row_actions/: __init__.py  admin.py  components.py  utils.py  views.py
django_admin_row_actions/locale/ru_RU/LC_MESSAGES/: django.po
django_admin_row_actions/locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
django_admin_row_actions/static/css/: jquery.dropdown.min.css
django_admin_row_actions/static/js/: jquery.dropdown.js  jquery.dropdown.min.js
django_admin_row_actions/templates/django_admin_row_actions/: dropdown.html
